# zac-caret

./: .claudeignore  .gitignore  01_SYSTEM_ARCHITECTURE.md  02_V1_PROJECT_ROADMAP.md  CLAUDE.md  HOW_IT_WORKS.md  M10_POLISH_LAUNCH_IMPLEMENTATION.md  M6_M7_WORKERS_CLAUDE_CLI_IMPLEMENTATION.md  M8_M9_PROGRESS_TOKENS_IMPLEMENTATION.md  QUICK_START_GUIDE.md  README.md  TEST_REPORT.md  USER_GUIDE.md  rust-toolchain.toml
app/: COMPREHENSIVE_STATUS.md  Cargo.toml  HOW_IT_WORKS.md  IMPLEMENTATION_PROGRESS.md  M2_M3_COMPLETE.txt  M2_M3_IMPLEMENTATION_SUMMARY.md  M2_PREP_SUMMARY.md  M4_M5_STATUS.md
app/.claude/: ralph-loop.local.md
app/config/: default.toml
app/src/: camera.rs  index.html  main.rs  main.rs.backup-before-m2-m3
app/src-tauri/: tauri.conf.json
app/src/agents/: mod.rs
app/src/core/: database.rs
app/src/frontend/: index.html
app/src/game/: camera.rs  mod.rs  resources.rs  world.rs
app/src/game/cli/: mod.rs
app/src/game/components/: mod.rs  staged_building.rs
app/src/game/entities/: building_stage.rs  mod.rs  town_hall.rs
app/src/game/project/: mod.rs
app/src/game/systems/: autonomous_assignment.rs  building_renderer.rs  leisure_zone.rs  mission_manager.rs  mission_writer.rs  mod.rs  movement.rs  progress_tracker.rs  project_spawner.rs  selection.rs  stats_display.rs  stats_updater.rs  task_assignment.rs  token_tracker.rs  worker_movement.rs  worker_spawner.rs
app/src/game/worker/: mod.rs
app/src/ui/: ipc.rs  mod.rs
app/src/ui/components/: building_controls.rs  mod.rs  town_hall_controls.rs
docs/: 03_SCAFFOLDING_GUIDE.md  04_FIRST_TICKET_M1.md
ui/: Cargo.toml  Trunk.toml  index.html  style.css
ui/src/: app.rs  main.rs
