[package]
name = "zac-caret"
version = "0.1.0"
edition = "2021"
description = "Gamified AI Agent Orchestration Platform"
authors = ["Zac"]

[dependencies]
# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"

# Bevy (3D game engine)
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_text",
    "bevy_ui",
    "png",
"tonemapping_luts",
    "x11",
    "dynamic_linking",
] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Claude API
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
rand = "0.8"

# Secure storage
keyring = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
